fixes tool-bar first button color when contrasting-panels is not enabled. fixes #283

--- a/styles/packages/tool-bar.less
+++ b/styles/packages/tool-bar.less
@@ -153,7 +153,7 @@
     .tinted-tab-bar & {
         &.tool-bar-vertical {
             .tool-bar-btn {
-                background: darken(@base-color, 5%);
+                background: @base-color;
                 color: @accent-text-color;
 
                 svg path, svg polygon {
@@ -182,6 +182,24 @@
             }
             .tool-bar-spacer {
                 border-color: fade(@accent-text-color, 15%);
+            }
+        }
+    }
+    .tinted-tab-bar.panel-contrast & {
+        &.tool-bar-vertical {
+            .tool-bar-btn {
+                background: darken(@base-color, 5%);
+                color: @accent-text-color;
+
+                svg path, svg polygon {
+                    fill: @accent-text-color;
+                }
+            }
+            .tool-bar-btn.tool-bar-item-align-end,
+            .tool-bar-btn:not(.tool-bar-item-align-end) + .tool-bar-btn,
+            .tool-bar-spacer + .tool-bar-btn {
+                background: none;
+                color: @text-color;
             }
         }
     }
